--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   /* height: 100%; */
   /* overflow: hidden; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .App {
