--- a/src/home-components/Home.css
+++ b/src/home-components/Home.css
@@ -21,7 +21,8 @@ html {
 .navbar {
   padding-bottom: 1px;
   border-bottom: solid 1px #e8e8e8;
-  box-shadow: 0 3px 6px -2px rgba(0, 0, 0, 0.12),
+  box-shadow:
+    0 3px 6px -2px rgba(0, 0, 0, 0.12),
     0 6px 16px -11px rgba(0, 0, 0, 0.08);
   /* position: sticky; */
   top: 0;
@@ -145,26 +146,6 @@ html {
 }
 
 /* Navbar End */
-
-/* Navigation */
-
-.main--navigation {
-  width: 100%;
-  position: absolute;
-  display: flex;
-  justify-content: space-evenly;
-  gap: 3.2rem;
-  align-items: center;
-  font-family: "Poppins", sans-serif;
-  /* backdrop-filter: blur(10px); */
-}
-
-.main--navigation ul {
-  display: flex;
-  list-style: none;
-  gap: 4.8rem;
-  font-size: 2.4rem;
-}
 
 .main--header {
   /* position: relative; */
